# graph

./: CMakeLists.txt  README.md
graph-core/: CMakeLists.txt
graph-core/include/graph/: graph_core.hpp  graph_core_config.hpp.config  graph_error_handling.hpp  graph_vector.hpp
graph-core/src/: graph_core.cpp  graph_error_handling.cpp
graph-core/tests/: CMakeLists.txt  graph.cpp
graph-rest/: CMakeLists.txt
graph-rest/include/graph/: graph_rest.hpp  graph_rest_config.hpp.config
graph-rest/src/: graph_rest.cpp
graph-rest/tests/: CMakeLists.txt  graph.cpp
include/graph/: graph.hpp  graph_string.hpp
src/: graph.cpp  graph_error_handling.cpp
tests/: CMakeLists.txt  graph.cpp
